<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="textStart"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button1"
        android:layout_width="90dp"
        android:layout_height="53dp"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:text="@string/button1"
        android:textColor="#4E342E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.349"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="90dp"
        android:layout_height="53dp"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:text="@string/button2"
        android:textColor="#4E342E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.663"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="90dp"
        android:layout_height="53dp"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:text="@string/button5"
        android:textColor="#4E342E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.662"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.597" />

    <Button
        android:id="@+id/button4"
        android:layout_width="90dp"
        android:layout_height="53dp"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:text="@string/button4"
        android:textColor="#4E342E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.346"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.596" />

    <Button
        android:id="@+id/button3"
        android:layout_width="90dp"
        android:layout_height="53dp"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:text="@string/button3"
        android:textColor="#4E342E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.983"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button6"
        android:layout_width="90dp"
        android:layout_height="53dp"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:text="@string/button6"
        android:textColor="#4E342E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.98"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.595" />

    <Button
        android:id="@+id/button7"
        android:layout_width="90dp"
        android:layout_height="53dp"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:text="@string/button7"
        android:textColor="#4E342E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.349"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.696" />

    <Button
        android:id="@+id/button8"
        android:layout_width="90dp"
        android:layout_height="53dp"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:text="@string/button8"
        android:textColor="#4E342E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.663"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.696" />

    <Button
        android:id="@+id/button9"
        android:layout_width="90dp"
        android:layout_height="53dp"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:text="@string/button9"
        android:textColor="#4E342E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.98"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.696" />

    <Button
        android:id="@+id/button0"
        android:layout_width="90dp"
        android:layout_height="53dp"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:text="@string/button0"
        android:textColor="#4E342E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.346"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.786" />

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="185dp"
        android:layout_height="52dp"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:text="@string/buttonclear"
        android:textColor="#4E342E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.971"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.787" />

    <TextView
        android:id="@+id/textViewInput"
        android:layout_width="384dp"
        android:layout_height="57dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="608dp"
        android:text="@string/txtinput"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textViewHeader"
        android:layout_width="411dp"
        android:layout_height="44dp"
        android:layout_marginBottom="687dp"
        android:background="#4CAF50"
        android:gravity="center_vertical"
        android:text="@string/txtheader"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView500"
        android:layout_width="159dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="137dp"
        android:layout_marginEnd="356dp"
        android:layout_marginBottom="567dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/txt500"
        android:textAlignment="textStart"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.503" />

    <TextView
        android:id="@+id/textView200"
        android:layout_width="159dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="178dp"
        android:layout_marginEnd="356dp"
        android:layout_marginBottom="526dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/txt200"
        android:textAlignment="textStart"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497" />

    <TextView
        android:id="@+id/textView100"
        android:layout_width="162dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="219dp"
        android:layout_marginEnd="356dp"
        android:layout_marginBottom="485dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/txt100"
        android:textAlignment="textStart"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.486" />

    <TextView
        android:id="@+id/textView50"
        android:layout_width="162dp"
        android:layout_height="37dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="263dp"
        android:layout_marginEnd="367dp"
        android:layout_marginBottom="441dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/txt50"
        android:textAlignment="textStart"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="120dp"
        android:layout_height="37dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="305dp"
        android:layout_marginEnd="367dp"
        android:layout_marginBottom="399dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/txt20"
        android:textAlignment="textStart"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.513" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="88dp"
        android:layout_height="29dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="352dp"
        android:layout_marginEnd="367dp"
        android:layout_marginBottom="352dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/txt10"
        android:textAlignment="textStart"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.496" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="85dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="392dp"
        android:layout_marginEnd="379dp"
        android:layout_marginBottom="312dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/txt5"
        android:textAlignment="textStart"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.509" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="87dp"
        android:layout_height="29dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="431dp"
        android:layout_marginEnd="379dp"
        android:layout_marginBottom="273dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/txt2"
        android:textAlignment="textStart"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.028"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.537" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="86dp"
        android:layout_height="31dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="472dp"
        android:layout_marginEnd="379dp"
        android:layout_marginBottom="232dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/txt1"
        android:textAlignment="textStart"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.512"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>